changes:
- change tomelistAdd to tomelist add
- add tomelist search <player> to find index of player in the tomelist
- add aspectlist search <player> to find aspects owed of player

breaking:
- overhaul aspect message duplication filtering to not require chiefs to install the mod