@@ -7,11 +7,12 @@ import net.fabricmc.fabric.api.client.command.v2.ClientCommandRegistrationCallba
 import pixlze.guildapi.GuildApi;
 import pixlze.guildapi.components.Managers;
 import pixlze.guildapi.components.Models;
+import pixlze.guildapi.handlers.chat.event.ChatMessageReceived;
 import pixlze.guildapi.mc.event.WynnChatMessage;
 import pixlze.guildapi.models.event.WorldStateEvents;
 import pixlze.guildapi.models.type.WorldState;
 import pixlze.guildapi.net.type.Api;
-import pixlze.guildapi.utils.ChatUtils;
+import pixlze.guildapi.utils.TextUtils;
 
 import java.net.URI;
 import java.util.Collections;
@@ -23,7 +24,7 @@ import java.util.regex.Pattern;
 
 public class SocketIOClient extends Api {
     private final Pattern guildForegroundPattern = Pattern.compile("^§b((\uDAFF\uDFFC\uE006\uDAFF\uDFFF\uE002\uDAFF\uDFFE)|(\uDAFF\uDFFC\uE001\uDB00\uDC06)).*§3(.*):§b (.*)$");
-    private final Pattern guildBackgroundPattern = Pattern.compile("^§8((\uDAFF\uDFFC\uE006\uDAFF\uDFFF\uE002\uDAFF\uDFFE)|(\uDAFF\uDFFC\uE001\uDB00\uDC06)).*$");
+    private final Pattern guildBackgroundPattern = Pattern.compile("^§8((\uDAFF\uDFFC\uE006\uDAFF\uDFFF\uE002\uDAFF\uDFFE)|(\uDAFF\uDFFC\uE001\uDB00\uDC06)).*§8(.*):§8 (.*)$");
     private Socket aspectSocket;
     private Socket discordSocket;
     private GuildApiClient guild;
@@ -62,18 +63,22 @@ public class SocketIOClient extends Api {
         crashed = false;
         guild = Managers.Net.getApi("guild", GuildApiClient.class);
         initSocket();
+        ChatMessageReceived.EVENT.register((message) -> {
+//            GuildApi.LOGGER.info("chatmessagereceived: {}", TextUtils.parsePlain(message));
+        });
         WynnChatMessage.EVENT.register((message) -> {
-                    String m = ChatUtils.parseStyled(message);
+                    String m = TextUtils.parseStyled(message);
                     Matcher foregroundMatcher = guildForegroundPattern.matcher(m);
                     Matcher backgroundMatcher = guildBackgroundPattern.matcher(m);
                     if (foregroundMatcher.find()) {
                         discordEmit("send", Map.of("username", foregroundMatcher
                                 .group(4), "message", foregroundMatcher.group(5)));
-                    } else if (guildBackgroundPattern.matcher(m).find()) {
-                        // "§8󏿼󏿿󏿾§8 §8󏿿󏿿󏿿󏿿󏿿󏿿󏿿󏿿󏿿󏿿󏿊§8󐀂§8 §8pixlze:§8 wh"
+                    } else if (backgroundMatcher.find()) {
                         GuildApi.LOGGER.info("background");
-                        discordEmit("send", Map.of("username", "somalia", "message", m));
+                        // TODO implement chat handler like wynntils
+                        // don't need to implement all of wynntils features, just check for new lines during npc dialog
 
+//                        discordEmit("send", Map.of("username", backgroundMatcher.group(4), "message", backgroundMatcher.group(5)));
                     }
                 }
         );
